--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,3 +1,8 @@
 <web-app>
     <display-name>'Roleplaying Web App'</display-name>
+    <context-param>
+        <description>Ruta por donde se guardan las imagenes</description>
+        <param-name>image-path</param-name>
+        <param-value></param-value>
+    </context-param>
 </web-app>
